# Logger

./: CMakeLists.txt
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  main.cpp
examples/globalConfig/: CMakeLists.txt  LogModule.cpp  LogModule.hpp  main.cpp
examples/standard/: CMakeLists.txt  main.cpp
lib/: FetchLibraries.cmake
src/: CMakeLists.txt  ILogOutput.hpp  LogConfig.cpp  LogConfig.hpp  LogEntry.cpp  LogEntry.hpp  LogLevel.cpp  LogLevel.hpp  LogOutputConsole.cpp  LogOutputConsole.hpp  LogOutputFile.cpp  LogOutputFile.hpp  LogOutputMock.cpp  LogOutputMock.hpp  Logger.cpp  Logger.hpp  Profiler.cpp  main.cpp
src/include/: ILogOutput.hpp  LogConfig.hpp  LogEntry.hpp  LogLevel.hpp  LogOutputConsole.hpp  LogOutputFile.hpp  LogOutputMock.hpp  Logger.hpp  Profiler.hpp
tests/: CMakeLists.txt  FetchGTest.cmake  LogConfig.gtest.cpp  LogEntry.gtest.cpp  LogLevel.gtest.cpp  LogOutput.gtest.cpp
